@@ -12,9 +12,3 @@ REGTESTTARGETS += test-pic16
 
 # cross-tools are installed
 OTHERTARGETS = i586-mingw32msvc i386-unknown-linux2.5
-
-# The SDCC documentation package is built on this machine
-# Configure the doc Makefile
-SDCCCONFIGUREFLAGS = --enable-doc
-# Run the doc Makefile
-OPT_ENABLE_DOC = 1
